# Hack-UPC

./: .gitignore  BrainPipeline.py  EEGVisualiser.py  Muse.py  README.md  app.py  main.py  package-lock.json  package.json  pyproject.toml  visualise.py
backend/: app.py
backend/services/: devices.py  eeg.py
backend/utils/muse/: BrainPipeline.py  ConnectionManager.py  EEGProcessor.py  MetricComputator.py  MuseHeadset.py
backend/utils/schemas/: device_schemas.py
basicFrontend/: clarityOS.jsx  index.html  package-lock.json  package.json
basicFrontend/src/: BrainCanvas.jsx  ClarityOS.jsx  main.jsx
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  FlappyFocus.jsx  ProcessedWaves.jsx
templates/: index.html
