[project]
name = "hack-upc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitstring>=4.4.0",
    "bleak>=3.0.1",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "uvicorn[standard]>=0.46.0",
]
